[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fonts/LOGO_B_TEXT.tres" type="DynamicFont" id=1]
[ext_resource path="res://IMAGENS_ICONES/Icon_Conf.png" type="Texture" id=2]
[ext_resource path="res://SCENE/CardSprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://SCENE/LOGO.gd" type="Script" id=4]
[ext_resource path="res://SCENE/Cards_Visual.gd" type="Script" id=5]
[ext_resource path="res://Fonts/Stone Serif Semibold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Fonts/Yu-Gi-Oh! Matrix Book.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://others/BigFont.tres" type="DynamicFont" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 245, 50 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="CanvasItemMaterial" id=4]

[sub_resource type="Curve" id=5]
max_value = 2.0
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.491071, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 7 )

[node name="CONF" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0

[node name="Tween" type="Tween" parent="."]

[node name="LOGO" type="Sprite" parent="."]
position = Vector2( 960, 75 )
texture = ExtResource( 2 )
offset = Vector2( -200, 0 )
script = ExtResource( 4 )

[node name="TSB" type="TouchScreenButton" parent="LOGO"]
shape = SubResource( 1 )
shape_centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="LOGO"]
margin_left = -132.0
margin_top = -33.0
margin_right = 241.0
margin_bottom = 53.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Configurations"
text = "Configurations"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cards_Visual" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="CB_Grayscale" type="CheckBox" parent="Cards_Visual"]
margin_left = 60.2702
margin_top = 141.114
margin_right = 157.27
margin_bottom = 167.114
custom_fonts/font = SubResource( 2 )
text = "Grayscale"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Cards_Visual/CB_Grayscale"]
margin_left = 26.0
margin_top = 44.0
margin_right = 553.0
margin_bottom = 116.0
custom_fonts/normal_font = SubResource( 3 )
text = "if true all zero owned cards will be in grayscale."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CB_ShowNumber" type="CheckBox" parent="Cards_Visual"]
margin_left = 60.2702
margin_top = 265.253
margin_right = 192.27
margin_bottom = 291.253
custom_fonts/font = SubResource( 2 )
text = "Show Numbers"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Cards_Visual/CB_ShowNumber"]
margin_left = 26.0
margin_top = 39.0
margin_right = 535.0
margin_bottom = 108.0
custom_fonts/normal_font = SubResource( 3 )
text = "if true the owned number'll be displayed in the each card."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CB_DescSelection" type="CheckBox" parent="Cards_Visual"]
margin_left = 60.2702
margin_top = 391.219
margin_right = 272.27
margin_bottom = 417.219
custom_fonts/font = SubResource( 2 )
text = "Desc/Effect Text Selection"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Cards_Visual/CB_DescSelection"]
margin_left = 26.0
margin_top = 36.0
margin_right = 505.0
margin_bottom = 80.0
custom_fonts/normal_font = SubResource( 3 )
text = "Enable text selection in Card's Desc/Effect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CB_SRUR_Particles" type="CheckBox" parent="Cards_Visual"]
margin_left = 60.0
margin_top = 488.355
margin_right = 205.0
margin_bottom = 514.355
custom_fonts/font = SubResource( 2 )
text = "SR / UR Particles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Cards_Visual/CB_SRUR_Particles"]
margin_left = 26.0
margin_top = 39.0
margin_right = 503.0
margin_bottom = 104.0
custom_fonts/normal_font = SubResource( 3 )
text = "if true shows shite particles animations in SR / UR cards."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CB_ShowDiference" type="CheckBox" parent="Cards_Visual"]
margin_left = 60.0
margin_top = 619.496
margin_right = 210.0
margin_bottom = 645.496
custom_fonts/font = SubResource( 2 )
text = "Show Differences"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Cards_Visual/CB_ShowDiference"]
margin_left = 26.0
margin_top = 37.0
margin_right = 491.0
margin_bottom = 104.0
custom_fonts/normal_font = SubResource( 3 )
text = "If true shows difference in Trade/Wish list between the owned and desirable cards."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CB_KeepText" type="CheckBox" parent="Cards_Visual"]
margin_left = 62.3327
margin_top = 747.796
margin_right = 238.333
margin_bottom = 773.796
custom_fonts/font = SubResource( 2 )
text = "Keeps texts in Search"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Cards_Visual/CB_KeepText"]
margin_left = 26.0
margin_top = 49.0
margin_right = 471.0
margin_bottom = 112.0
custom_fonts/normal_font = SubResource( 3 )
text = "If true last text search'll be still available to be edited. Else it'll be cleared."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CB_NameDate" type="CheckBox" parent="Cards_Visual"]
margin_left = 62.3327
margin_top = 878.427
margin_right = 225.333
margin_bottom = 904.427
custom_fonts/font = SubResource( 2 )
text = "Show Date & Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Cards_Visual/CB_NameDate"]
margin_left = 26.0
margin_top = 44.0
margin_right = 487.0
margin_bottom = 146.0
custom_fonts/normal_font = SubResource( 3 )
text = "if true the current date'll be displayed, also the whathever you type in the next box will be displayed in the WISH/TRADE as well."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SampleCARD" type="Node2D" parent="Cards_Visual"]
position = Vector2( 1256.9, 131.958 )
scale = Vector2( 2, 2 )

[node name="Card_Manual" parent="Cards_Visual/SampleCARD" instance=ExtResource( 3 )]
scale = Vector2( 0.28, 0.28 )

[node name="TXT" type="RichTextLabel" parent="Cards_Visual/SampleCARD"]
margin_left = 40.0
margin_top = 108.0
margin_right = 264.0
margin_bottom = 287.0
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = false
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 14 )
bbcode_enabled = true
bbcode_text = "[center]0"
visible_characters = 3
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PARTICLE" type="CPUParticles2D" parent="Cards_Visual/SampleCARD"]
modulate = Color( 1, 1, 1, 0.498039 )
material = SubResource( 4 )
position = Vector2( 150, 200 )
amount = 500
emission_shape = 2
emission_rect_extents = Vector2( 150, 200 )
gravity = Vector2( 0, 0 )
scale_amount = 2.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 5 )
color_ramp = SubResource( 7 )

[node name="TXT_NAME" type="TextEdit" parent="Cards_Visual"]
margin_left = 88.0
margin_top = 1036.0
margin_right = 680.0
margin_bottom = 1084.0
custom_fonts/font = SubResource( 6 )
text = "YOUR NAME HERE =D"
context_menu_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}
